# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.8
#

2005-05-18 14:30:11 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-92

    Summary:
      html, fix parser when encoding is defined late
    Revision:
      itools--main--0.8--patch-92

    Now the encoding is detected by "html.parser", this allows to parse
    documents when an encoding different than UTF-8 is defined late, for
    example:
    
      <title>some accentuated character here in latin 1</title>
      <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
    
    Here an accentuated character appears before the encoding declaration.
    Now we can deal with these cases.

    modified files:
     Changelog html/HTML.py html/parser.py


2005-05-10 14:39:51 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-91

    Summary:
      html, make a more robust parser
    Revision:
      itools--main--0.8--patch-91

    Deal with:
    
     - Elements with optional end tag that miss it.
    
     - Lonely end tags.
    
     - Boolean attributes in minimized form.

    modified files:
     Changelog catalog/prof.py html/HTML.py html/parser.py


2005-05-09 15:51:27 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-90

    Summary:
      html, detect source encoding
    Revision:
      itools--main--0.8--patch-90


    modified files:
     Changelog html/HTML.py


2005-05-09 13:04:04 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-89

    Summary:
      html, add non standard "embed" empty tag
    Revision:
      itools--main--0.8--patch-89


    modified files:
     Changelog html/parser.py


2005-05-09 11:04:38 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-88

    Summary:
      i18n, fix "igettext --pot"
    Revision:
      itools--main--0.8--patch-88


    modified files:
     Changelog i18n/igettext.py


2005-05-03 13:08:09 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-87

    Summary:
      i18n, fix igettext