@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.8
 #
 
+2005-05-23 09:45:18 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-93
+
+    Summary:
+      handlers, fix csv parser for one column csv files
+    Revision:
+      itools--main--0.8--patch-93
+
+
+    modified files:
+     Changelog handlers/CSV.py
+
+
 2005-05-18 14:30:11 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-92
 
     Summary:
